@@ -109,11 +109,11 @@
 #include "scip/presol_components.h"
 #include "scip/presol_convertinttobin.h"
 #include "scip/presol_domcol.h"
-#include "scip/presol_dualfix.h"
 #include "scip/presol_gateextraction.h"
 #include "scip/presol_implics.h"
 #include "scip/presol_inttobinary.h"
 #include "scip/presol_trivial.h"
+#include "scip/prop_dualfix.h"
 #include "scip/prop_genvbounds.h"
 #include "scip/prop_obbt.h"
 #include "scip/prop_probing.h"
