@@ -3,6 +3,7 @@ SCIP version NEXT
 
 features:
 - added new dual presolving for setppc-constraints
+- changed dualfix presolver to propagator such that dual fixing can also be applied during repropagation of the root node
 
 interface
 - SCIPcalcMIR() gets an additional parameter "cutrank" which returns the rank of the aggregation; via SCIProwChgRank()
